# exasol-labs-text2sql-mcp-server

./: DISCLAIMER.md  Dockerfile  README-OAuth-Authentication.md  README.md  SECURITY.md  main.py  mcp_exasol_passwords.py  mcp_server_config.json  pyproject.toml
exasol/ai/mcp/server/: main.py  mcp_server.py
exasol/ai/mcp/server/text_to_sql_option/: e_r_diagram.py  sql_history.py  text_to_sql.py
exasol/ai/mcp/server/text_to_sql_option/intro/: intro.py
exasol/ai/mcp/server/text_to_sql_option/nodes/: info_messages_llm.py  routing.py
exasol/ai/mcp/server/text_to_sql_option/resources/: sql_translation_prompt.txt
exasol/ai/mcp/server/text_to_sql_option/secondary_nodes/: routing.py
exasol/ai/mcp/server/text_to_sql_option/utils/: database_functions.py  helpers.py  llm.py  load_prompts.py
exasol_mcp_server_governed_sql/: database_functions.py  helpers.py  info_messages_llm.py  intro.py  learn_sql.py  llm.py  load_prompts.py  main.py  routing.py  sql_audit.py  text_to_sql.py
mcp-server/: pyproject.toml
mcp-server/exa_prompt/: prompt.txt  pyproject.toml
mcp-server/exa_prompt/src/exa_prompt/: load_prompt.py  prompt.txt
mcp-server/exasol/ai/mcp/server/: mcp_server.py  server_settings.py  text_to_sql.py
text_to_sql_option/: e_r_diagram.py  learn_sql.py  sql_audit.py  sql_history.py  text_to_sql.py
text_to_sql_option/intro/: intro.py
text_to_sql_option/secondary_nodes/: info_messages_llm.py  routing.py
text_to_sql_option/utilities/: database_functions.py  load_prompts.py
