[project]
name = "exasol-mcp-server-governed-sql"
version = "0.1.1"
description = "Extension of the official supported EXasol MCP-Server with Text-to-SQL (GovernedSQL)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.7",
    "exasol-mcp-server==1.2.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "loguru>=0.7.3",
]
