[project]
name = "exasol-mcp-server-governed-sql"
version = "1.2.1a"
description = "Extension of the official supported EXasol MCP-Server with Text-to-SQL (GovernedSQL)"
authors = [
    {name = "Dirk Beerbohm (Text-to-SQL)", email = "dirk.beerbohm@exasol.com"},
    {name = "Mikhail Beck", email = "mikhail.beck@exasol.com"},
]
readme = "README.md"
license = "MIT"
keywords = ['exasol', 'MCP server', 'Text-to-SQL', 'GovernedSQL']
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.7",
    "exasol-mcp-server==1.2.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "loguru>=0.7.3",
]
