[project]
name = "exasol-mcp-server-governed-sql"
version = "1.3.0.5"
requires-python = ">=3.12,<3.14"   # Restriction is due to numpy
description = "Exasol MCP Server with a experimental text-to-SQL option."
authors = [
    {name = "Dirk Beerbohm (Governed-SQL)",   email = "dirk.beerbohm@exasol.com"},
    {name = "Mikhail Beck (Core MCP Server)", email = "mikhail.beck@exasol.com"},
]
readme = "README.md"
license = "MIT"
keywords = ['exasol', 'MCP Server', 'Text-to-SQL', 'GovernedSQL']
dynamic = ["dependencies"]

[project.scripts]
exasol-mcp-server-governed-sql = "exasol_mcp_server_governed_sql.main:main"
exasol-mcp-server-governed-sql-http = "exasol_mcp_server_governed_sql.main:main_http"

[tool.poetry]
requires-poetry = ">=2.1.0"
packages = [
    { include = "exasol_mcp_server_governed_sql" },
]

[poetry.urls]
repository = "https://github.com/exasol-labs/exasol-labs-text2sql-mcp-server"
homepage = "https://github.com/exasol-labs/exasol-labs-text2sql-mcp-server"

[tool.poetry.dependencies]
exasol-mcp-server = "^1.3.0"
chromadb = "^1.4.1"
langchain-openai = "^1.1.7"
langgraph = "^1.0.7"
loguru = "^0.7.3"
sql_formatter = "^0.6.2"
fastmcp = "^2.13.0"
pyexasol = "^1.0.0"
sqlglot = "^27.2.0"
numpy = ">=2,<=2.2.0"
stopwords = "^1.0.1"
rank-bm25 = "^0.2.2"
click = "^8.3.0"
exasol-saas-api = "^2.4.0"

[tool.poetry.group.dev.dependencies]
exasol-toolbox = "^1.6.1"
pytest-exasol-backend = "^1.2.1"
pytest-exasol-extension = "^0.2.4"
exasol-integration-test-docker-environment = "^4.4.1"
oidc-provider-mock = "^0.2.9"
flask-oidc = "^2.4.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 15

[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.pylint.master]
fail-under = 5.0
output-format = "colorized,json:.lint.json,text:.lint.txt"
ignore-paths = [
    ".*/test/.*",
]

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.mypy]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "test.*",
]
ignore_errors = true

[tool.sonar]
projectKey = "exasol.com:mcp-server-governed-sql"
hostUrl = "https://sonarcloud.io"
organization = "exasol"
exclusions = "exasol/ai/mcp/server/version.py"
